--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admisión 2025 - IESTP María Rosario Araoz Pinto jordano nivel A</title>
+    <title>Admisión 2025 - IESTP María Rosario Araoz Pinto </title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Google Fonts -->
