--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,38 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            background-color: #f3f4f6;
-        }
-
-        .header-top {
-            background-color: #ffffff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-        }
-
-        .main-card {
-            border-top: 5px solid #16a34a;
-            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-        }
-
-        .btn-orange {
-            background-color: #f97316;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            /* Quitar subrayado de enlace */
-            display: inline-flex;
-            /* Para que se comporte como botón */
-        }
-
-        .btn-orange:hover {
-            background-color: #ea580c;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 6px rgba(249, 115, 22, 0.4);
-        }
-    </style>
+    <link rel="stylesheet" href="CSS\index.css">
 </head>
 
 <body class="flex flex-col min-h-screen">
