--- a/HTML/RenJurada.html
+++ b/HTML/RenJurada.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Agregar jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <link rel="stylesheet" href="CSS\RenJurada_style.css">
+    <link rel="stylesheet" href="CSS\RenJurada.css">
 </head>
 <body>
     <div class="container">
