--- a/HTML/index.html
+++ b/HTML/index.html
@@ -86,7 +86,7 @@
             </p>
 
             <!-- CORRECCIÓN AQUÍ: Usamos <a> directamente en lugar de <button> -->
-            <a href="registro.html"
+            <a href="../Scripts_PHP/registro.php"
                 class="btn-orange text-white font-bold py-4 px-8 rounded-full text-lg w-full md:w-auto min-w-[300px] flex items-center justify-center mx-auto gap-2 cursor-pointer">
                 INICIAR INSCRIPCIÓN AHORA AQUÍ
                 <i class="fas fa-arrow-right"></i>
