--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="CSS\index.css">
+    <link rel="stylesheet" href="HTML/CSS/index.css">
 </head>
 
 <body class="flex flex-col min-h-screen">
@@ -55,7 +55,7 @@
             </p>
 
             <!-- CORRECCIÓN AQUÍ: Usamos <a> directamente en lugar de <button> -->
-            <a href="../Scripts_PHP/registro.php"
+            <a href="Scripts_PHP/registro.php"
                 class="btn-orange text-white font-bold py-4 px-8 rounded-full text-lg w-full md:w-auto min-w-[300px] flex items-center justify-center mx-auto gap-2 cursor-pointer">
                 INICIAR INSCRIPCIÓN AHORA AQUÍ
                 <i class="fas fa-arrow-right"></i>
