CSS mejorado , masomenos , REVISAR DECLAJurada Mayor ,ptmr es el unico que su css se desordenod

--- a/HTML/DeclaJuraMayor.html
+++ b/HTML/DeclaJuraMayor.html
@@ -10,6 +10,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
+    <div class="header">
+        <div class="header-line">
+            <div>IESTP María Rosario Araoz Pinto</div>
+            <div>Ministerio de Educación</div>
+        </div>
+
+        <div class="institution-name">
+            INSTITUTO DE EDUCACIÓN SUPERIOR TECNOLÓGICO PÚBLICO<br>
+            MARÍA ROSARIO ARAOZ PINTO
+        </div>
+
+        <h1 class="main-title">DECLARACIÓN JURADA</h1>
+        <h2 class="subtitle">DE DOCUMENTOS (POSTULANTE MAYOR DE EDAD)</h2>
+    </div>
+
     <div class="app-container">
         <div class="controls-panel">
             <h2 class="controls-title">Completar Declaración Jurada</h2>
