--- a/HTML/DeclaJuraMenor.html
+++ b/HTML/DeclaJuraMenor.html
@@ -17,15 +17,18 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>P.B.U Ministerio de Educación</h1>
-            <div class="subtitle">Dirección Regional</div>
-            <h2>DECLARACIÓN JURADA DE DOCUMENTOS</h2>
-            <div>(POSTULANTE MENOR DE EDAD)</div>
-        </div>
-        
-        <div class="institution-name">
-            Instituto de Educación Superior Tecnológico Público<br>
-            María Rosario Araoz Pinto
+            <div class="header-line">
+                <div>IESTP María Rosario Araoz Pinto</div>
+                <div>Ministerio de Educación</div>
+            </div>
+
+            <div class="institution-name">
+                INSTITUTO DE EDUCACIÓN SUPERIOR TECNOLÓGICO PÚBLICO<br>
+                MARÍA ROSARIO ARAOZ PINTO
+            </div>
+
+            <h1 class="main-title">DECLARACIÓN JURADA</h1>
+            <h2 class="subtitle">DE DOCUMENTOS (POSTULANTE MENOR DE EDAD)</h2>
         </div>
         
         <form id="declaracionForm">
