--- a/HTML/SoliDirec.html
+++ b/HTML/SoliDirec.html
@@ -6,15 +6,25 @@
     <title>Solicitud de Inscripción y Acta de Compromiso</title>
     <!-- Agregar jsPDF -->
     <script src="https://cdnjs.cloudflare.com/aajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <link rel="stylesheet" href="CSS\DeclaJurada.css">
+    <link rel="stylesheet" href="CSS\RenJurada.css">
 </head>
 <body>
     <div class="container">
         <!-- PRIMER DOCUMENTO: SOLICITUD DE INSCRIPCIÓN -->
         <div class="document-container">
             <div class="header">
-                <div class="institution">Instituto de Educación Superior Tecnológico Público</div>
-                <div class="institution-sub">María Rosario Araoz Pinto</div>
+                <div class="header-line">
+                    <div>IESTP María Rosario Araoz Pinto</div>
+                    <div>Ministerio de Educación</div>
+                </div>
+
+                <div class="institution-name">
+                    INSTITUTO DE EDUCACIÓN SUPERIOR TECNOLÓGICO PÚBLICO<br>
+                    MARÍA ROSARIO ARAOZ PINTO
+                </div>
+
+                <h1 class="main-title">SOLICITUD DE INSCRIPCIÓN</h1>
+                <h2 class="subtitle">Y ACTA DE COMPROMISO</h2>
             </div>
             
             <form id="solicitudForm">
@@ -121,8 +131,17 @@
         <!-- SEGUNDO DOCUMENTO: ACTA DE COMPROMISO -->
         <div class="document-container">
             <div class="header">
-                <div class="institution">Instituto de Educación Superior Tecnológico Público</div>
-                <div class="institution-sub">María Rosario Araoz Pinto</div>
+                <div class="header-line">
+                    <div>IESTP María Rosario Araoz Pinto</div>
+                    <div>Ministerio de Educación</div>
+                </div>
+
+                <div class="institution-name">
+                    INSTITUTO DE EDUCACIÓN SUPERIOR TECNOLÓGICO PÚBLICO<br>
+                    MARÍA ROSARIO ARAOZ PINTO
+                </div>
+
+                <h1 class="main-title">ACTA DE COMPROMISO</h1>
             </div>
             
             <div class="document-title">ACTA DE COMPROMISO</div>
