--- a/HTML/DeclaSalud.html
+++ b/HTML/DeclaSalud.html
@@ -6,7 +6,7 @@
     <title>Declaración Jurada de Salud - COVID-19</title>
     <!-- Agregar jsPDF -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <link rel="stylesheet" href="CSS\RenJurada.css">
+    <link rel="stylesheet" href="CSS\DeclaSaludUnified.css">
 </head>
 <body>
     <div class="container">
